2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (distclean, maintainer-clean): Remove DOCSTRINGS,
	not $(DOCSTRINGS).

2004-01-21  Quentin Spencer  <qspencer@ieee.org>

	* linear-algebra/rank.m: Allow rank ([]) to return 0, same as
	rank ([], tol).

2004-01-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* elfun/acot.m: Return atan (1./z).
	From Gregory Vanuxem <g.vanuxem@wanadoo.fr>.

	* miscellaneous/dir.m: New file.

	* general/num2str.m: Use "%d" as format if values are ints with
	magnitude less than 1e10.

2004-01-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/num2str.m: If single arg is string, return it.

	* miscellaneous/not.m: New file.

	* miscellaneous/unix.m: New file.

	* miscellaneous/isunix.m: New file.
	* miscellaneous/ispc.m: New file.

	* miscellaneous/computer.m: New file.

	* miscellaneous/delete.m: New file.

2004-01-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* statistics/tests/kolmogorov_smirnov_test_2.m: Fix test for ties.

2004-01-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/path.m: Handle DEFAULT_LOADPATH substitution.
	Always return substituted version of LOADPATH if nargout != 0.

2003-12-21  Schloegl Alois  <alois.schloegl@tugraz.at>

	* miscellaneous/fullfile.m: If filename is empty, set it to "."
	before continuing.

	* miscellaneous/fileparts.m: Allow name to start with ".".

2003-12-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/ind2sub.m: New file.
	* general/sub2ind.m: New file.

2003-12-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/system/zp2ss.m: Don't save and restore
	warn_empty_list_elements.

2003-12-15  Gabriele Pannocchia  <g.pannocchia@ing.unipi.it>

        * control/system/zp2ss.m: Correct definition of pure gain system.

2003-12-10  Quentin Spencer  <qspencer@ieee.org>

	* statistics/base/mean.m: Remove special case for row vectors.

2003-11-19  Quentin Spencer  <qspencer@ieee.org>

	* signal/freqz_plot.m: Save and restore automatic_replot too.
